Latest com.jtconnors.socket (21.0.0) library, maven goals added utilizing jlink and jpackage